--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "animate.css": "^4.1.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.7",
     "tslib": "^2.0.0",
