--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
     "animate.css": "^4.1.1",
+    "ngx-cookie-service": "^11.0.1",
+    "ngx-socket-io": "^3.0.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.1.7",
     "tslib": "^2.0.0",
